# FastAPI-course

./: README.md  pyproject.toml
_2_3_1/: main.py
_2_3_2/: main.py  schemas.py
_2_3_3/: main.py  schemas.py
_3_1_2/: main.py  schemas.py
_3_2_1/: main.py
_3_2_2/: config.py  main.py
_3_2_3/: config.py  main.py  schemas.py
_3_3_3/: main.py  schemas.py
_4_1_3/: config.py  main.py  schemas.py
_4_2_1/: config.py  main.py  users.py  utils.py
_4_2_1/certs/: jwt-private.pem
_4_2_2/: config.py  main.py  schemas.py  users.py  utils.py
_4_2_2/certs/: jwt-public.pem
_4_2_3/: authentication.py  config.py  dependencies.py  main.py  schemas.py  users.py  validation.py
_4_3_1/: authentication.py  config.py  dependencies.py  main.py  rbac.py  schemas.py  users.py
_4_3_2/: authentication.py  config.py  dependencies.py  main.py  protected_resource.py  rbac.py  schemas.py  users.py
_4_3_3/: config.py  main.py  rbac.py  schemas.py  users.py  util.py
_4_3_3/api/endpoints/: resources.py
_4_3_3/api/endpoints/auth/: authentication.py  dependencies.py  router.py  schemas.py  validation.py
_4_3_3/api/endpoints/protected_resoure/: dependencies.py  protected_resource.py
